# highpermeshes-drts-gaspi

./: CMakeLists.txt  README.md  build-and-execute.sh  clone_script.sh
.github/workflows/: build_ubuntu_gnu.yml
CI/github/: install_libnuma.sh  install_opencl.sh
cmake/: FindACE.cmake  FindGPI2.cmake  FindGaspiCxx.cmake  HighPerMeshesDRTSConfig.cmake.in
examples/: CMakeLists.txt  Environment.hpp  Experiments.cpp  ScalabilityNeighbors.cpp  ScalabilitySimplePattern.cpp  matrix_vec_product.cpp  matrix_vec_product_omp.cpp  surface_kernel.cpp  surface_kernel_omp.cpp  volume_kernel.cpp  volume_kernel_omp.cpp
examples/Functions/: mathFunctions.hpp  outputWriter.hpp  simplexGradients.hpp  solver.hpp
examples/MIDG2_DSL/: mainUnfusedKernelsDRTS.cpp
examples/Monodomain_DSL/: CMakeLists.txt
examples/Monodomain_DSL/meshfiles/: mesh2D.am  mesh2D_20x20.am  mesh3D_amiraFile.am
examples/Monodomain_DSL/src/: config.cfg  config3D.cfg  monodomain2D.cpp  monodomain2DSettings.hpp  monodomain3D.cpp
examples/Poisson_DSL/: CMakeLists.txt
examples/Poisson_DSL/meshfiles/: mesh2D_test5x5.am  meshTestFile.neu  unitcube_amiraFile.am  unstructured2DMeshfile.am  unstructured2DMeshfile22Nodes.am
examples/Poisson_DSL/src/: config.cfg  config2DMatFree.cfg  configMatFree.cfg  poisson2DMatFree.cpp  poisson3D.cpp  poisson3DMatFree.cpp  poissonFunctions.hpp
include/: HighPerMeshesDRTS.hpp
include/HighPerMeshes/auxiliary/: BufferOperations.hpp
include/HighPerMeshes/common/: MinMaxType.hpp
include/HighPerMeshes/drts/: Comm.hpp  DeviceTopologyDescription.hpp  Doxyfile  SequentialExecutor.hpp  Task.hpp  UsingDevice.hpp  UsingDistributedDevices.hpp  UsingGaspi.hpp
include/HighPerMeshes/drts/comm/: BoundaryBuffer.hpp  BoundaryBufferBase.hpp  CLBoundaryBuffer.hpp  CLHaloBuffer.hpp  HaloBuffer.hpp  HaloBufferBase.hpp
include/HighPerMeshes/dsl/dispatchers/: DistributedDispatcher.hpp
tests/: CMakeLists.txt  create-files.sh  machine_file  run_distributed_tests.sh  tests.cpp
tests/auxiliary/: BufferOperations.cpp
tests/drts/: Task.cpp
tests/drts/comm/: BufferTest.cpp  CLBufferTest.cpp  DistributedBufferTest.cpp
tests/drts/data_flow/: DataDependencyMaps.cpp  GraphTest.cpp
tests/dsl/LoopTypes/: AccessDefinitionHelpers.cpp
tests/dsl/data_access/: GatherDofs.cpp
tests/dsl/dispatchers/: DistributedDispatcher.cpp
tests/dsl/mesh/: PartitionedMesh.cpp
tests/dsl/tmp/util/: IsAccessDefinitionTest.cpp  IsDataAccessesTest.cpp  IsExpressionSupportedTest.cpp  IsTemplateSpecialization.hpp  TupleTypeTraitsTest.cpp
tests/util/: GaspiSingleton.hpp  Grid.hpp  TagGenerator.hpp  UnitCube.hpp
